se esta verirficando la logica